--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@
 set -g default-terminal "tmux-256color"
 # set -ag terminal-overrides ",xterm-256color:RGB"
 set -sg terminal-overrides ",*:RGB"
+set -g default-command /bin/zsh
 
 set -g prefix C-a
 unbind C-b
