--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,9 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
 
