Added moving and resizing window binds

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,6 +16,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
+monitor=DP1,preferred,auto-up,auto
 
 
 ###################
@@ -40,6 +41,8 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+
+exec-once = waybar
 
 
 #############################
@@ -191,10 +194,22 @@ bind = $mainMod, F1, exec, hyprctl keyword monitor eDP-1, disable
 bind = $mainMod, F2, exec, hyprctl keyword monitor eDP-1, enable
 
 # Move focus with mainMod + vim bindings
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
+
+# Resize windows
+bind = $mainMod SHIFT, H, resizeactive, 50 0
+bind = $mainMod SHIFT, L, resizeactive, -50 0
+bind = $mainMod SHIFT, K, resizeactive, 0 -50
+bind = $mainMod SHIFT, J, resizeactive, 0 50
+
+# Move windows
+bind = $mainMod CTRL, H, movewindow, l
+bind = $mainMod CTRL, L, movewindow, r
+bind = $mainMod CTRL, K, movewindow, u
+bind = $mainMod CTRL, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
