--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1,preferred,auto,1.6
 monitor=DP1,preferred,auto-up,auto
 
 
@@ -28,7 +28,8 @@ monitor=DP1,preferred,auto-up,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = rofi -show drun
+$browser = firefox
 
 
 #################
@@ -42,7 +43,7 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = waybar
+exec-once = waybar & hyprpaper
 
 
 #############################
@@ -182,6 +183,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, C, killactive,
+bind = $mainMod, W, exec, $browser
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -192,6 +194,11 @@ bind = $mainMod SHIFT, P, togglesplit, # dwindle
 # Custom
 bind = $mainMod, F1, exec, hyprctl keyword monitor eDP-1, disable
 bind = $mainMod, F2, exec, hyprctl keyword monitor eDP-1, enable
+
+bind = $mainMod, F3, exec, hyprctl keyword monitor DP-1, disable
+bind = $mainMod, F4, exec, hyprctl keyword monitor DP-1, enable
+
+bind = $mainMod CTRL, P, exec, /usr/local/bin/hyprland.sh
 
 # Move focus with mainMod + vim bindings
 bind = $mainMod, H, movefocus, l
@@ -275,3 +282,5 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
