--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -44,7 +44,7 @@ $browser = firefox
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = waybar & hyprpaper
-
+exec = /usr/bin/lxpolkit
 
 #############################
 ### ENVIRONMENT VARIABLES ###
