--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -6,11 +6,11 @@ preload = ~/Pictures/Wallpapers/pb-wall.png
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
 wallpaper = eDP-1, ~/Pictures/Wallpapers/pb-wall.png
 #if more than one monitor in use, can load a 2nd image
-# wallpaper = monitor2, ~/Downloads/pb-wall.png
+wallpaper = DP-1, ~/Pictures/Wallpapers/pb-wall.png
 # .. more monitors
 
 #enable splash text rendering over the wallpaper
-splash = true
+# splash = true
 
 #fully disable ipc
 # ipc = off
