--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,6 +2,12 @@
 ##
 ## Upstream: github.com/bluz71/vim-moonfly-colors
 
+font_family      RobotoMono Nerd Font
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+
+
 background #080808
 foreground #bdbdbd
 cursor #9e9e9e
