awesome, picom, tmux, zsh improvements

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,7 @@ bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
 bind -r m resize-pane -Z
+bind-key b set-option status
 
 set -g mouse on
 
