--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -12,10 +12,10 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 20;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = 0.8;
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -49,6 +49,7 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'Firefox'",
+  "class_g = 'firefox' && window_type = 'popup_menu'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -74,7 +75,7 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-fading = false
+fading = false;
 # fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
@@ -145,7 +146,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 2
+corner-radius = 10
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
